Design polish - Fix settings in dark mode - Fix resize bug in grid - Adjust button color

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,5 @@
 @import 'tailwindcss';
+
+body {
+  overflow-y: scroll;
+}
